--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 </main>
 </div>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Natálie Břichnáčová</a>.
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Natálie Břichnáčová</a>.</p>
   </div>
   </div>
 </body>
